force-app/main/default/objects/Pay_Statement_Line__c/Pay_Statement_Line__c.object-meta.xml
<CustomObject>
    <label>Pay Statement Line</label>
    <nameField>
        <label>Pay Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pay Statement Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>