force-app/main/default/objects/Pay_Statement_Line__c/fields/Deduction_Type__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Type__c</fullName>
    <label>Deduction Type</label>
    <type>Picklist</type>

    <valueSet>
        <valueSetDefinition>

            <value>
                <fullName>Health Insurance</fullName>
                <default>true</default>
                <label>Health Insurance</label>
            </value>

            <value>
                <fullName>Dental Insurance</fullName>
            </value>

            <value>
                <fullName>Vision Insurance</fullName>
            </value>

            <value>
                <fullName>Life Insurance</fullName>
            </value>

            <value>
                <fullName>Short Term Disability</fullName>
            </value>

            <value>
                <fullName>Long Term Disability</fullName>
            </value>

            <value>
                <fullName>Child Support</fullName>
            </value>

            <value>
                <fullName>Tax Levy</fullName>
            </value>

            <value>
                <fullName>HSA</fullName>
            </value>

            <value>
                <fullName>FSA</fullName>
            </value>

            <value>
                <fullName>401k Pre-Tax</fullName>
            </value>

            <value>
                <fullName>401k Post-Tax</fullName>
            </value>

            <value>
                <fullName>Garnishment</fullName>
            </value>

            <value>
                <fullName>Other</fullName>
            </value>

        </valueSetDefinition>
    </valueSet>

</CustomField>