force-app/main/default/objects/Pay_Statement_Line__c/fields/Line_Category__c.field-meta.xml
<CustomField>
    <fullName>Line_Category__c</fullName>
    <label>Line Category</label>
    <type>Picklist</type>

    <valueSet>
        <valueSetDefinition>

            <value>
                <fullName>Regular Wages</fullName>
                <default>true</default>
                <label>Regular Wages</label>
            </value>

            <value>
                <fullName>Overtime</fullName>
            </value>

            <value>
                <fullName>Holiday</fullName>
            </value>

            <value>
                <fullName>Sick</fullName>
            </value>

            <value>
                <fullName>Vacation</fullName>
            </value>

            <value>
                <fullName>Bonus</fullName>
            </value>

            <value>
                <fullName>Commission</fullName>
            </value>

            <value>
                <fullName>Piece Work</fullName>
            </value>

            <value>
                <fullName>Other</fullName>
            </value>

        </valueSetDefinition>
    </valueSet>

</CustomField>