force-app/main/default/objects/Pay_Statement_Line__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <label>Line Type</label>
    <type>Picklist</type>

    <valueSet>
        <valueSetDefinition>

            <value>
                <fullName>Earning</fullName>
                <default>true</default>
                <label>Earning</label>
            </value>

            <value>
                <fullName>Tax</fullName>
            </value>

            <value>
                <fullName>Deduction</fullName>
            </value>

            <value>
                <fullName>Reimbursement</fullName>
            </value>

        </valueSetDefinition>
    </valueSet>

</CustomField>