force-app/main/default/objects/Pay_Statement_Line__c/fields/Pay_Statement__c.field-meta.xml
<CustomField>
    <fullName>Pay_Statement__c</fullName>
    <description>Pay statement associated with this line item.</description>
    <label>Pay Statement</label>
    <referenceTo>Pay_Statement__c</referenceTo>
    <relationshipLabel>Pay Statement Lines</relationshipLabel>
    <relationshipName>Pay_Statement_Pay_Statement_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>