force-app/main/default/objects/Pay_Statement_Line__c/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <label>Tax Type</label>
    <type>Picklist</type>

    <valueSet>
        <valueSetDefinition>

            <value>
                <fullName>Federal Income Tax</fullName>
                <default>true</default>
                <label>Federal Income Tax</label>
            </value>

            <value>
                <fullName>State Income Tax</fullName>
            </value>

            <value>
                <fullName>Local Income Tax</fullName>
            </value>

            <value>
                <fullName>Social Security</fullName>
            </value>

            <value>
                <fullName>Medicare</fullName>
            </value>

            <value>
                <fullName>Other</fullName>
            </value>

        </valueSetDefinition>
    </valueSet>

</CustomField>